[gd_scene load_steps=14 format=3 uid="uid://cnfpl88fjql2s"]

[ext_resource type="Script" uid="uid://dihhfwjd3q8rv" path="res://Scripts/pause_menu.gd" id="1_emv3i"]
[ext_resource type="Shader" uid="uid://doflmmuvqrque" path="res://Assets/Shader/pause_menu.gdshader" id="2_k0w1u"]
[ext_resource type="Script" uid="uid://dtnd08jkrn42r" path="res://Scripts/sfx_button.gd" id="3_1och7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1och7"]
shader = ExtResource("2_k0w1u")
shader_parameter/blur_amount = 3.0000001425
shader_parameter/darken = 0.35

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1och7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bpi0q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmyb1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myy0f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sjs17"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u8tnp"]

[sub_resource type="Animation" id="Animation_1och7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k0w1u"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bpi0q"]
_data = {
&"RESET": SubResource("Animation_1och7"),
&"blur": SubResource("Animation_k0w1u")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_emv3i")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1och7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(1, 0, 0.1871481, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -93.0
offset_right = 116.5
offset_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_1och7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bpi0q")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bpi0q")
text = "Resume"
script = ExtResource("3_1och7")

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vmyb1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vmyb1")
text = "Settings"
script = ExtResource("3_1och7")

[node name="Credits" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/hover = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_myy0f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_myy0f")
text = "Credits"
script = ExtResource("3_1och7")

[node name="ExitToMainMenu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_sjs17")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sjs17")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sjs17")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sjs17")
theme_override_styles/focus = SubResource("StyleBoxEmpty_sjs17")
text = "Exit to main menu"
script = ExtResource("3_1och7")

[node name="QuitGame" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_u8tnp")
theme_override_styles/focus = SubResource("StyleBoxEmpty_u8tnp")
text = "Quit game"
script = ExtResource("3_1och7")

[node name="Blur" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_bpi0q")
}

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/ExitToMainMenu" to="." method="_on_exit_to_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
